# refactor

./: Cargo.toml  README.md  gpui-symbols.txt  reset-zed-worktree-and-refactor.sh
src/: ascribe.rs  file_editor.rs  flow_analysis.rs  fn_params.scm  function_type_params.scm  functions.scm  functions_query.rs  imports.scm  lib.rs  main.rs  parameters.scm  print_scip.rs  print_tree.rs  query_calls.rs  query_imports.rs  refactor.rs  refactor2.rs  scip_index.rs  splitter.rs  upgrade.rs
